kubernetes/ds2.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  creationTimestamp: null
  generation: 1
  labels:
    system: DaemonSetOne
  name: ds-two
  selfLink: /apis/extensions/v1beta1/namespaces/default/daemonsets/ds-one
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      system: DaemonSetOne
  template:
    metadata:
      creationTimestamp: null
      labels:
        system: DaemonSetOne
    spec:
      containers:
      - image: nginx:1.9.1
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  templateGeneration: 3
  updateStrategy:
    type: RollingUpdate 
status:
  currentNumberScheduled: 0
  desiredNumberScheduled: 0
  numberMisscheduled: 0
  numberReady: 0
